# ca3_for_submission-CaolanMaher

./: CMakeLists.txt  README.md
engine/: engine.cpp  system_renderer.cpp  system_renderer.h
lab_7_platformer/: game.h  platformer_main.cpp
lab_7_platformer/components/: cmp_adv_ground_enemy.cpp  cmp_adv_ground_enemy.h  cmp_bullet.cpp  cmp_bullet.h  cmp_double_jump.cpp  cmp_double_jump.h  cmp_enemy_turret.cpp  cmp_enemy_turret.h  cmp_flying_enemy.cpp  cmp_flying_enemy.h  cmp_health_pickup.cpp  cmp_health_pickup.h  cmp_health_player.cpp  cmp_health_player.h  cmp_hurt_player.h  cmp_hut_player.cpp  cmp_item.cpp  cmp_item.h  cmp_player_attack.cpp  cmp_player_attack.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_text.cpp  cmp_text.h
lab_7_platformer/scenes/: scene_level1.cpp  scene_level1.h  scene_level2.cpp  scene_level3.cpp  scene_level4.cpp  scene_level4.h  scene_menu.cpp
lib_image/: image.cpp  image.h
lib_sound/: sound.cpp  sound.h
lib_tile_level_loader/: LevelSystem.cpp
res/: level_1.txt  level_2.txt  level_3.txt  level_4.txt
res/data/: audio.json  player_data.json  turret_data.json
